--- a/systemd/pmtubd-workaround@.service
+++ b/systemd/pmtubd-workaround@.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 Type=oneshot
 Environment="SCRIPT_ARGS=%I"
-ExecStart=bash /opt/pmtubd-workaround.sh $SCRIPT_ARGS
+ExecStart=/usr/bin/bash /opt/pmtubd-workaround.sh $SCRIPT_ARGS
 Restart=on-failure
 
 [Install]
