--- a/systemd/pmtud-bh-workaround@.service
+++ b/systemd/pmtud-bh-workaround@.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Path MTU Discovery Black Hole Workaround
-Documentation=https://github.com/PtaxLaine/pmtubd-workaround
+Documentation=https://github.com/PtaxLaine/pmtud-bh-workaround
 After=network-online.target
 
 [Service]
 Type=oneshot
 Environment="SCRIPT_ARGS=%I"
-ExecStart=/usr/bin/bash /opt/pmtubd-workaround.sh $SCRIPT_ARGS
+ExecStart=/usr/bin/bash /opt/pmtud-bh-workaround.sh $SCRIPT_ARGS
 Restart=on-failure
 
 [Install]
